fix header / short-status wrap issue

--- a/trunk/package/webif/files/www/webif.css
+++ b/trunk/package/webif/files/www/webif.css
@@ -69,21 +69,23 @@ option
 
 #short-status
 {
-	position: relative;
-	line-height: 1.0em;
+	position: absolute;
+	top: 0em;
+	left: 80%;
+	float: right;	
+	line-height: 1.0em;	
 	padding-top: 0.2em;
 	padding-bottom: 0.2em;
 	padding-right: 0.5em;
-	padding-left: 0.2em;
-	float: right;
+	padding-left: 2em;		
 }
 
 .openwrt-title
 {
 	position: relative;
 	float: left;
-	width: 50em;
-	margin-top:	1em;
+	width: 80%;
+	margin-top: 1em;
 	height: 5em;
 	background:	url(/images/supersmall-footer.png);
 	background-repeat: repeat-x;
